--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,29 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.movie{
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 50px;
+}
+
+.mcard{
+  padding-left: 30px;
+  align-items: center;
+}
+
+.movie img{
+  width: 250px!important;
+  height: 350px!important;
 }
 
 .App-link {
